misc cleanup, fixed a typo (#2)